@@ -2,6 +2,7 @@
 Version 1.4.1
 -------------
 
+- fixed HTML export to properly escape the text (#1739062)
 - remember last used search phrase in Find window (#1909847)
 - Windows: fixed text entry using AltGr on many European keyboards
 
